# swe-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/swe_agent/: __init__.py  cli.py  llm.py  main.py  prompt.py  sqlite_session_manager.py  workspace.py
src/swe_agent/tools/: __init__.py  command_tools.py  file_tools.py  git_tools.py  project_tools.py
