[project]
name = "swe-agent"
version = "0.1.0"
description = "一个用于代码问答、编辑、命令执行和 session 记忆的最小 SWE Agent CLI。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "litellm>=1.91.2",
    "pydantic>=2.13.4",
    "typer>=0.26.8",
]

[project.scripts]
swe-agent = "swe_agent.main:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
